# TelloFaceTracking

./: AutoPilot.cpp  AutoPilot.h  CMakeLists.txt  ControlSys.cpp  ControlSys.h  GrabFrame.cpp  GrabFrame.h  ImageProcessing.cpp  ImageProcessing.h  Networking.cpp  Networking.h  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
UAV_Remote/: AutoPilot.cpp  AutoPilot.h  CMakeLists.txt  ControlSys.cpp  ControlSys.h  GrabFrame.cpp  GrabFrame.h  ImageProcessing.cpp  ImageProcessing.h  Networking.cpp  Networking.h  main.cpp
